--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
     "@webpack-cli/generators": "^3.0.2",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "nodemon": "^2.0.22",
     "style-loader": "^3.3.2",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3",
     "workbox-webpack-plugin": "^6.5.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
