--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,9 @@
-APP_PORT=5000
+APP_PORT=3000
 APP_NAME=express_todo_list
 
 #mysql
-MYSQL_host=localhost
+MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_DATABASE=todo_node
 MYSQL_USER=root
-MYSQL_PASSEORD=
+MYSQL_PASSEWORD=
